--- a/html/destinos.html
+++ b/html/destinos.html
@@ -5,9 +5,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="proyecto final">
-        <meta name="keywords" content="pagina web">
-        <meta name="author" content="Irene Imbriani">
+        <!--meta description-->
+    <meta name="description" content="Descubre la Argentina más auténtica. Desde los majestuosos glaciares patagónicos hasta las vibrantes ciudades como Buenos Aires, encuentra tu destino ideal. Aventuras al aire libre, cultura milenaria y paisajes únicos te esperan. ¡Reserva tu viaje ahora!">
+    <meta name="keywords" content="Argentina, Destinos turísticos,  Viajar a Argentina,  Vacaciones en Argentina,     Turismo en Argentina, Descubrir Argentina, Experiencias únicas, Paisajes argentinos,Viajes Argentina, Patagonia Argentina,Cataratas, Bariloche, Destinos Argentina, cosas para hacer en Argentina,Purmamarca,"    
+    <!---meta author-->      
+    <meta name="author" content="Irene Imbriani">
+    <!---meta phone-->
+    <meta name="telephone" content="11111111">
+    <!---meta- geo.placename-->
+    <meta name="geo.placename" content="Argentina">
         <!--------google fonts-------->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,7 +41,6 @@
     <body>
 
         <header>
-
             <nav class="navbar navbar-expand-lg fixed-top">
                 <div class="container d-flex">
 
@@ -79,16 +84,14 @@
                     </button>
                 </div>
             </nav>
-
         </header>
 
         <main class="principal">
-            <section>
-                <div class="container-fluid mt-5">
+            <section>               
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <h1 class="p-4 text-center">Tu próximo
+                                <h1 class="p-4 text-center espera">Tu próximo
                                     destino te espera</h1>
                             </div>
                             <p class="fs-5 lh-1">
@@ -146,7 +149,7 @@
 
                     </div>
 
-                </div>
+             
             </section>
 
             <section class="mt-0 pt-0">
