--- a/html/contacto.html
+++ b/html/contacto.html
@@ -5,9 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="proyecto final">
-    <meta name="keywords" content="pagina web">
+    <!--meta description-->
+    <meta name="description" content="🇦🇷 ¡Descubrí Argentina con nosotros! 🇦🇷 Aventuras únicas, paisajes impresionantes y experiencias inolvidables te esperan. Planificamos tu viaje a medida para que disfrutes al máximo de este hermoso país. ¡Contactanos ahora!">
+    <!---meta tag keywords 5 a 15-->
+    <meta name="keywords" content="Contacto Argentina, formulario contacto viajes Argentina,reservar viajes Argentina, planificar viajes Argentina,expertos en viajes Argentina  " content="pagina web"> 
+    <!---meta author-->      
     <meta name="author" content="Irene Imbriani">
+    <!---meta phone-->
+    <meta name="telephone" content="11111111">
+    <!---meta- geo.placename-->
+    <meta name="geo.placename" content="Argentina">
     <!--------google fonts-------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -84,9 +91,9 @@
             <div class="container mt-5 pt-5">
                 <div class="row">
                     <h1 class="text-center">Contactanos</h1>  
-                    <div class="row">
+                    <div class="row mt-5">
                         <div class="col-8 mx-auto col-lg-4">
-                            <div class="card">
+                            <div class="card-contacto">
                                 <div class="card-body text-center mt-3">
                                     <img src="../assets/redes/contacto-01.png" class="img-fluid" alt="icono_telefono">
                                 </div>
@@ -99,7 +106,7 @@
                         </div>
     
                         <div class="col-8 mx-auto col-lg-4">
-                            <div class="card">
+                            <div class="card-contacto">
                                 <div class="card-body text-center mt-3">
                                     <img src="../assets/redes/contacto-03.png" class="img-fluid" alt="icono_email">
                                 </div>
@@ -114,7 +121,7 @@
                         </div>
     
                         <div class="col-8 mx-auto col-lg-4">
-                            <div class="card">
+                            <div class="card-contacto">
                                 <div class="card-body text-center mt-3">
                                     <img src="../assets/redes/contacto-02.png" class="img-fluid" alt="icono_localización">
                                 </div>
@@ -133,11 +140,11 @@
             </div>
         </section>
 
-        <section class="contactanos">                    
-                <div class="container form-contacto">                   
-                     <div class="col-12">
-                        <p class="fs-2 text-secondary fw-bold mb-0">
-                            Dejanos tus datos y nos comunicaremos a la brevedad</p> 
+        <section class="contactanos"> 
+            <p class="fs-2 text-secondary fw-bold mb-0">
+                Dejanos tus datos y nos comunicaremos a la brevedad</p>                   
+                <div class="container form-contacto">                 
+                   <div class="col-12">                    
                     <div class="contact-form-area">
                         <div class="contact-form">
                             <form action="#">
