volviendo a commit anterior en una rama nueva de respaldo, agregando seo

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -5,9 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="proyecto final">
-    <meta name="keywords" content="pagina web">
-    <meta name="author" content="Irene Imbriani">
+   <!--meta description-->
+   <meta name="description" content="🇦🇷 ¡Descubrí Argentina con nosotros! 🇦🇷 Aventuras únicas, paisajes impresionantes y experiencias inolvidables te esperan. Planificamos tu viaje a medida para que disfrutes al máximo de este hermoso país. ¡Contactanos ahora!">
+   <!---meta tag keywords 5 a 15-->
+   <meta name="keywords" content="Contacto Argentina, formulario contacto viajes Argentina,reservar viajes Argentina, planificar viajes Argentina,expertos en viajes Argentina  " content="pagina web"> 
+   <!---meta author-->      
+   <meta name="author" content="Irene Imbriani">
+   <!---meta phone-->
+   <meta name="telephone" content="11111111">
+   <!---meta- geo.placename-->
+   <meta name="geo.placename" content="Argentina">
+
+
     <!--------google fonts-------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
