--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="proyecto final">
-    <meta name="keywords" content="pagina web">
-    <meta name="author" content="Irene Imbriani">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">  
+      <!--meta description-->
+      <meta name="description" content=" Explora Argentina. Naturaleza, aventura y experiencias únicas. Encuentra los mejores destinos, alojamientos y actividades para tu próximo viaje. Planifica con guías detalladas y precios para todos los presupuestos.">
+      <!---meta tag keywords 5 a 15-->
+      <meta name="keywords" content="vacaciones Argentina, viajes Argentina, trekking,tours, destinos, actividades, naturaleza, excursiones, experiencias," content="pagina web"> 
+      <!---meta author-->      
+      <meta name="author" content="Irene Imbriani">
+      <!---meta phone-->
+      <meta name="telephone" content="11111111">
+      <!---meta- geo.placename-->
+      <meta name="geo.placename" content="Argentina">
     <!--------google fonts-------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
