--- a/html/actividades.html
+++ b/html/actividades.html
@@ -4,10 +4,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="proyecto final">
-        <meta name="keywords" content="pagina web">
-        <meta name="author" content="Irene Imbriani">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">        
+   <!--meta description-->
+    <meta name="description" content="Experiencias de viaje inolvidables te esperan en Argentina! Explora los impresionantes paisajes de la Patagonia, maravíllate con las majestuosas Cataratas del Iguazú o pasea por las encantadoras calles de Buenos Aires. Desde actividades de aventura hasta inmersión cultural, Argentina tiene algo para todos. ¡Reserva tus vacaciones soñadas hoy mismo!">
+    <meta name="keywords" content="Destinos Argentina, cosas para hacer en Argentina,Viajes Argentina, Patagonia Argentina,Cataratas, Bariloche, Purmamarca, Jujuy,turismo aventura, turismo familiar, turismo de lujo." content="pagina web"> 
+    <!---meta author-->      
+    <meta name="author" content="Irene Imbriani">
+    <!---meta phone-->
+    <meta name="telephone" content="11111111">
+    <!---meta- geo.placename-->
+    <meta name="geo.placename" content="Argentina">
+
         <!--------google fonts-------->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
