--- a/html/informacion.html
+++ b/html/informacion.html
@@ -72,19 +72,18 @@
                             <li class="nav-item"><a class="nav-link text-white"
                                     href="../html/contacto.html">contacto</a>
                             </li>
-
                         </ul>
-                    </div>
-
-                    <button class="navbar-toggler" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#navbarText"
-                        aria-controls="navbarText" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon "></span>
-                    </button>
+                    </div>                 
                 </div>
+                <button class="navbar-toggler" type="button"
+                data-bs-toggle="collapse" data-bs-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <i class="fas fa-solid fa-bars fa-1x"></i>
+                <span class="navbar-toggler-icon"></span>
+            </button>
             </nav>
-
+       
         </header>
 
         <main>
