--- a/html/actividades.html
+++ b/html/actividades.html
@@ -75,16 +75,16 @@
 
                         </ul>
                     </div>
-
                     <button class="navbar-toggler" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#navbarText"
-                        aria-controls="navbarText" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon "></span>
-                    </button>
-                </div>
+                    data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <i class="fas fa-solid fa-bars fa-1x"></i>
+                    <span class="navbar-toggler-icon"></span>
+               </button>
+                      </div>
             </nav>
-
+   
         </header>
 
         <main class="seccion_principal text-center">
