--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
+            <button class="navbar-toggler" type="button"
+            data-bs-toggle="collapse" data-bs-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <i class="fas fa-solid fa-bars fa-1x"></i>
+            <span class="navbar-toggler-icon"></span>
+        </button>
         </nav>
 
     </header>
