ajustes diseño responsive

--- a/html/actividades.html
+++ b/html/actividades.html
@@ -87,12 +87,13 @@
    
         </header>
 
-        <main class="seccion_principal text-center">
-            <section>
+        <main class="seccion_principal text-center pt-5 mt-5">
+            <section class="mt-5 pt-1">
                 <!--comienzo contenedor cards-->
                 <div class="container text-center">
                     <h1 class="bienvenido">Descubrí Argentina
                     </h1>
+                    <div class="border"></div>
                     <h2 class="fw-semibold text-dark">Un viaje inolvidable a
                         través de la historia y la naturaleza.</h2>
                     <p class="fs-4 fw-light text-dark"><b>Argentina lo tiene
