--- a/html/destinos.html
+++ b/html/destinos.html
@@ -20,12 +20,14 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&family=Praise&family=Seymour+One&display=swap"
             rel="stylesheet">
+             <!------fontawesome---------->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
         <!--------------bootstrap------------>
         <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous">
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        crossorigin="anonymous">
         <!--------css------>
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <title>destinos</title>
@@ -35,8 +37,9 @@
     <title>destinos</title>------->
     </head>
 
-    <body>
+    <body>       
         <header>
+
             <nav class="navbar navbar-expand-lg fixed-top">
                 <div class="container d-flex">
 
@@ -70,27 +73,29 @@
 
                         </ul>
                     </div>
+                   
 
                     <button class="navbar-toggler" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#navbarText"
-                        aria-controls="navbarText" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <i class="fas fa-solid fa-bars fa-1x"></i>
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
+                    data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <i class="fas fa-solid fa-bars fa-1x"></i>
+                    <span class="navbar-toggler-icon"></span>
+               </button>
+                      </div>
             </nav>
+   
         </header>
 
-
-        <main class="seccion_principal">
+        <main class="principal mt-5 pt-5">
             <section>
-                <div class="container-fluid mt-5">
+                <div class="container-fluid mt-5 pt-5">
                     <div class="container">
                         <div class="row">
-                            <div class="col mt-5 pt-5">
+                            <div class="col">
                                 <h1 class="p-4 text-center">Tu próximo
                                     destino te espera</h1>
+                                    <div class="border"></div>
                             </div>
                             <p class="fs-5 lh-1">
                                 Descubre la Argentina que siempre soñaste. Desde
@@ -104,41 +109,41 @@
                         </div>
                     </div>
 
-                    <div class="container">
+                    <div class="container-fluid">
                         <!-- imagenes de destinos-->
                         <div class="row p-4">
                             <div class="col-12 col-lg-4">
-                                <div class="card border-0">
+                                <div class="card border-0 my-2">
                                     <img
                                         src="../assets/destinos/destinos-01.png"
                                         class="card-img-top img-fluid h-100"
                                         alt="Imagen_cactus_jujuy">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
+                                        <h5 class="card-title">Jujuy</h5>
 
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 col-lg-4">
-                                <div class="card border-0">
+                                <div class="card border-0  my-2">
                                     <img
                                         src="../assets/destinos/destinos-02.png"
                                         class="card-img-top img-fluid h-100"
                                         alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
+                                        <h5 class="card-title">Bariloche</h5>
 
                                     </div>
                                 </div>
                             </div>
                             <div class="col-12 col-lg-4">
-                                <div class="card  border-0">
+                                <div class="card  border-0  my-2">
                                     <img
                                         src="../assets/destinos/destinos-03.png"
                                         class="card-img-top img-fluid h-100"
                                         alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
+                                        <h5 class="card-title">Usuahia</h5>
 
                                     </div>
                                 </div>
@@ -159,7 +164,7 @@
                     <div class="card-header border-0">
                     </div>
                     <div class="explora card-body border-0 p-3 lh-1">
-                        <p class="card-text mb-0 pb-1">#Explora
+                        <p class="card-text mb-0 pb-1 pt-4">#Explora
                             Argentina</p>
                         <h5 class="card-title fs-2 fw-normal mt-0">Compartí
                             tu experiencia</h5>
@@ -303,9 +308,9 @@
           
         </main>
         <aside>
-            <h3>Alojamientos elegídos por nuestros viajeros
+            <h3 class="fw-semibold">Alojamientos elegídos por nuestros viajeros
             </h3>
-            <div class="container">
+            <div class="container-fluid p-4">
                 <!-- imagenes de destinos-->
                 <div id="carouselExampleCaptions" class="carousel slide">
                     <div class="carousel-indicators">
@@ -433,10 +438,11 @@
 
         </div>
         <!--bundle de bootstrap-->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+         <!-----------bundle de bootstrap-------->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
     </body>
 
 </html>
